enviando arquivos de pdfs, queries e controllers de pdf

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,6 @@
-<div id="dishes">
+<h1>Restaurants</h1>
+
+<div id="restaurants">
   <% @restaurants.each do |restaurant| %>
     <%= render restaurant %>
     <p>
